--- a/project/notebooks/multiple_traces_compare.ipynb
+++ b/project/notebooks/multiple_traces_compare.ipynb
@@ -64,17 +64,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "id": "ba326e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<python_code.GP_model.GibbsSampler at 0x7f98195bc100>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gb = GP_model.GibbsSampler(X_depts, y_depts, time_vecs, n_iter=100000, burn=0, betas_start=1, sigmas_start=1, mu_start=1,\n",
+    "                 sigmas_diag_start=1, bandwidth_start=10, tau_sq_1_start=20, f_start=-5, sigmas_proposal=[1,1])\n",
+    "gb.fit()\n",
+    "with open('../pickle_trace.pickle', 'wb') as handle:\n",
+    "    pickle.dump(a, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "88e93f23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "UnpicklingError",
+     "evalue": "pickle data was truncated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5t/ltqvfkd124z1n5v3ntgw77d40000gn/T/ipykernel_94731/1497347421.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mtraces1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../pickle_traces/traces1.pickle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mtraces2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUnpicklingError\u001b[0m: pickle data was truncated"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
-    "with open('traces0.pickle', 'rb') as handle:\n",
+    "with open('../pickle_traces/traces0.pickle', 'rb') as handle:\n",
     "    traces1 = pickle.load(handle)\n",
-    "with open('traces1.pickle', 'rb') as handle:\n",
+    "with open('../pickle_traces/traces1.pickle', 'rb') as handle:\n",
     "    traces2 = pickle.load(handle)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b979a04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
