Updates from Overleaf

--- a/project/writeup/report.tex
+++ b/project/writeup/report.tex
@@ -101,7 +101,7 @@ To avoid multicolinearity issues in the model, principal component analysis was 
 
 
 
-The next step was to determine whether the incident data could be approximated as being normally distributed, where:
+The next step was to determine whether linear regression could be used on the incident data, that is:
 \begin{align*}
     y_i \sim N(X_i \beta_i, \sigma_i^2I)
 \end{align*}
